--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,3 +16,9 @@ jobs:
 
       - run: npm install
       - run: npm test
+
+    docker:
+      needs: docker-build
+      uses: ./.github/workflows/docker-image.yml
+      secrets: inherit
+
