--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,8 +17,8 @@ jobs:
       - run: npm install
       - run: npm test
 
-    docker:
-      needs: docker-build
-      uses: ./.github/workflows/docker-image.yml
-      secrets: inherit
-
+  docker:
+    needs: build
+    uses: ./.github/workflows/docker-image.yml
+    secrets: inherit
+    
