--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag darkvills/pokedex:$(date +%s)
+      run: docker build . --file Dockerfile --tag darkvills/pokedex:1.0
 
   push:
     runs-on: ubuntu-latest
