--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,4 +36,4 @@ jobs:
           push: true
           tags: |
             darkvills/pokedex:latest  
-            darkvills/pokedex:$(date +%s)
+            darkvills/pokedex::1.0
