--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,12 @@ jobs:
       run: docker build . --file Dockerfile --tag darkvills/pokedex:1.0
 
   push:
+  
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -33,6 +37,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: true
           push: true
           tags: |
             darkvills/pokedex:latest  
